--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dependencies": {
         "latest-version": "^4.0.0",
         "moment": "^2.22.2",
-        "react-bootstrap": "^0.32.4"
+        "react-bootstrap": "^0.32.4",
+        "prop-types": "latest"
     }
 }
