--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "latest-version": "^4.0.0",
         "moment": "^2.22.2",
         "react-bootstrap": "^0.32.4",
-        "prop-types": "latest"
+        "prop-types": "latest",
+        "react-router": "latest"
     }
 }
