--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
         "react-router-dom": "^4.3.1"
     },
     "dependencies": {
+        "draft-js": "^0.10.5",
         "latest-version": "^4.0.0",
         "moment": "^2.22.2",
-        "react-bootstrap": "^0.32.4",
         "prop-types": "latest",
+        "react-bootstrap": "^0.32.4",
+        "react-draft-wysiwyg": "^1.12.13",
+        "react-progress-bar-plus": "^1.3.1",
         "react-router": "latest"
     }
 }
