[Fix] fix api vote

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "latest-version": "^4.0.0",
         "moment": "^2.22.2",
         "prop-types": "latest",
+        "react-addons-css-transition-group": "^15.6.2",
         "react-bootstrap": "^0.32.4",
         "react-draft-wysiwyg": "^1.12.13",
         "react-progress-bar-plus": "^1.3.1",
