--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     },
     "dependencies": {
         "draft-js": "^0.10.5",
+        "laravel-echo": "^1.5.2",
         "latest-version": "^4.0.0",
         "moment": "^2.22.2",
         "prop-types": "latest",
+        "pusher-js": "^4.3.1",
         "react-bootstrap": "^0.32.4",
         "react-draft-wysiwyg": "^1.12.13",
         "react-progress-bar-plus": "^1.3.1",
