--- a/package.json
+++ b/package.json
@@ -18,16 +18,17 @@
         "jquery": "^3.2",
         "laravel-mix": "^2.0",
         "lodash": "^4.17.5",
-        "popper.js": "^1.12",
-        "react": "^16.2.0",
-        "react-dom": "^16.2.0",
+        "popper.js": "^1.14.6",
+        "react": "^16.6.3",
+        "react-dom": "^16.6.3",
         "react-router-dom": "^4.3.1"
     },
     "dependencies": {
         "draft-js": "^0.10.5",
         "laravel-echo": "^1.5.2",
         "latest-version": "^4.0.0",
-        "moment": "^2.22.2",
+        "moment": "^2.23.0",
+        "npm": "^6.5.0",
         "prop-types": "latest",
         "pusher-js": "^4.3.1",
         "react-addons-css-transition-group": "^15.6.2",
