--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
         "react-bootstrap": "^0.32.4",
         "react-draft-wysiwyg": "^1.12.13",
         "react-progress-bar-plus": "^1.3.1",
-        "react-router": "latest"
+        "react-pusher": "^0.2.0",
+        "react-redux": "^6.0.0",
+        "react-router": "latest",
+        "redux": "^4.0.1"
     }
 }
